Documentation and bug fixes

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,10 +4,8 @@ author: Joachim Gassen
 ---
 
 ```{r setup, include=FALSE}
-set.seed(42)
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = TRUE)
 library(tidyverse)
-library(rdfanalysis)
 library(knitr)
 ```
 
@@ -40,11 +38,14 @@ There are at least already two packages that provide data and infrastructure rel
 - `{conronavirus}`: This [package](https://github.com/RamiKrispin/coronavirus) provides
 the Johns Hopkins University CSSE dataset together with a dashboard
 
-Other than the two packages above, the key objective of the {tidycovid19} package is to provide *transparent* access to *various* data sources. It does not contain any data per se. Instead, it provides functions to pull data from publicly available data sources.
+Other than the two packages above, the key objective of the {tidycovid19} package is to provide *transparent* access to *various* data sources. It does not contain any data per se. Instead, it provides functions to pull data from publicly available sources.
 
 For those interested in speedy downloads it alternatively provides the option to
 download the data from the cached data in this repo (stored in the directory `cached_data`).
 The cached data will be updated daily.
+
+If you rather want to start your own project by customizing the code of this package to fit your needs, I suggest that you take a look at my [Github repository "tidy_covid19"](https://github.com/joachim-gassen/tidy_covid19) (mind the underscore).
+This repo presents a forkable code infrastructure for Covid 19 projects using the same data infrastructure.
 
 ## The Data
 
@@ -52,14 +53,15 @@ Currently, the package offers the following functions to download data:
 
 - `download_jhu_csse_covid19_data()`: Downloads and tidies [Covid-19 data from the Johns Hopkins University CSSE Github Repo](https://github.com/CSSEGISandData/COVID-19). This data has developed to a standard resource for researchers and the general audience 
 interested in assessing the global spreading of the virus. The data is aggregated to the country level.
-- `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://data.humdata.org/dataset/acaps-covid19-government-measures-dataset). These relatively new data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. 
+- `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://www.acaps.org/covid19-government-measures-dataset). These relatively new data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. 
 - `download_google_trend_data()`: Downloads and tidies [Google Trends](https://trends.google.com/trends/) data on the search volume for the term "coronavirus" (Thank you to Yan Ouaknine for bringing up that idea!). This data can be used to assess the public attention to Covid-19 across countries (see plot below) and over time within a given country.
 - `download_wbank_data()`: Downloads and tidies additional country level information provided by the [World Bank](https://data.worldbank.org) using the {wbstats} package. These data allow researchers to calculate per capita measures of the virus spread and to assess the association of macro-economic variables with the development of the virus.
 - `download_merged_data()`: Downloads all data sources and creates a merged country-day panel sample.
 
+
 ## Visualization
 
-The focus of the package lies on data collection and not on visualization as there are already many great tools floating around. The function `plot_covid19_spred()` however, allows you to quickly visualize the spread of the virus in relation to governmental intervention measures.
+The focus of the package lies on data collection and not on visualization as there are already many great tools floating around. The function `plot_covid19_spred()` however, allows you to quickly visualize the spread of the virus in relation to governmental intervention measures. It is inpired by the insightful displays created by John Burn-Murdoch from the Financial Times and offers various customization options.
 
 ```{r DemoPlot}
 #remotes::install_github("joachim-gassen/tidycovid19")
