Added Apple MTR data and multiple rounds of Google CMR PDFs

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,6 +49,7 @@ Currently, the package offers the following functions to download data:
 interested in assessing the global spreading of the virus. The data is aggregated to the country level.
 - `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://www.acaps.org/covid19-government-measures-dataset). These relatively new data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. 
 - `download_oxford_npi_data()`: Downloads and tidies data from the [Oxford Covid-19 Government Response Tracker](https://www.bsg.ox.ac.uk/research/research-projects/oxford-covid-19-government-response-tracker), an alternative data source for governmental interventions. Currently, I do not include the financial measures of this data set and also do not include its data in the merged data file (see below) as I view the ACAPS data to be better suited ([this blog post details why](https://joachim-gassen.github.io/2020/04/exploring-and-benchmarking-oxford-government-response-data/)). 
+- **NEW**: `download_apple_mtr_data()`: Downloads [Mobility Trends Reports provided by Apple](https://www.apple.com/covid19/mobility) related to Covid-19.
 - **NEW**: `download_google_cmr_pdfs()`/`scrape_google_cmr_data()`: Downloads and scrapes [Google COVID-19 Community Mobility Reports](https://www.google.com/covid19/mobility/). These reports come in PDF format and contain information on the changes in geographical moving patterns across georgraphic regions. As daily data is only provided as line graphs in these documents, I scan these graphs to provide country-day data. This process generates noisy measures and is likely to break as soon Google is changing the PDF format of the reports. The function `download_google_cmr_pdfs()` downloads the PDF reports directly to a local directory.
 - `download_google_trends_data()`: Downloads and tidies [Google Trends](https://trends.google.com/trends/) data on the search volume for the term "coronavirus" (Thank you to Yan Ouaknine for bringing up that idea!). This data can be used to assess the public attention to Covid-19 across countries and over time within a given country.
 - `download_wbank_data()`: Downloads and tidies additional country level information provided by the [World Bank](https://data.worldbank.org) using the {wbstats} package. These data allow researchers to calculate per capita measures of the virus spread and to assess the association of macro-economic variables with the development of the virus.
