--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,12 @@ interested in assessing the global spreading of the virus. The data is aggregate
 
 ## Visualization
 
-The focus of the package lies on data collection and not on visualization as there are already many great tools floating around. The function `plot_covid19_spread()` however, allows you to quickly visualize the spread of the virus in relation to governmental intervention measures. It is inpired by the insightful displays created by John Burn-Murdoch from the Financial Times and offers various customization options.
+The focus of the package lies on data collection and not on visualization as there are already many great tools floating around. Rgeardless, there are three functions that allow you to visualize some od the key data that the package provides.
+
+
+### Plot Covid-19 Spread over Event Time
+
+The function `plot_covid19_spread()` allows you to quickly visualize the spread of the virus in relation to governmental intervention measures. It is inpired by the insightful displays created by John Burn-Murdoch from the Financial Times and offers various customization options.
 
 ```{r DemoPlot}
 #remotes::install_github("joachim-gassen/tidycovid19")
@@ -71,6 +76,9 @@ plot_covid19_spread(
   intervention = "lockdown", edate_cutoff = 50
 )
 ```
+
+
+### Plot Covid-19 Stripes
 
 **NEW**: Another option to visualize the spread of Covid-19, in particular if you want to compare many countries, is to produce a stripes-based visualization. Meet the Covid-19 stripes:
 
@@ -97,6 +105,28 @@ plot_covid19_stripes(
   sort_countries = "countries"
 )
 ```
+
+### Map Covid-19
+
+**NEW**: Finally, as Covid-19 has become a truly world-wide pandemic, I decided to also include a basic mapping function. `map_covid19()` allows you to map the spread of the virus at a certain date both world-wide ...
+
+```{r MapWorldWide}
+map_covid19(merged, cumulative = TRUE)
+```
+
+... or for certain regions.
+
+```{r MapEurope}
+map_covid19(merged, type = "confirmed", region = "Europe")
+```
+
+If you have enough time (takes several minutes), you can also create an animation to visualize the spread of the virus over time.
+
+```{r AnimatedMapWorldWide}
+map_covid19(merged, type = "confirmed", dates = unique(merged$date))
+```
+
+Again, you can customize the data that you want to plot and of course you can also modify the plot itself by using normal `ggplot` syntax.
 
 
 ## Shiny App
