--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ interested in assessing the global spreading of the virus. The data is provided 
 - `download_oxford_npi_data()`: Downloads and tidies data from the [Oxford Covid-19 Government Response Tracker](https://www.bsg.ox.ac.uk/research/research-projects/oxford-covid-19-government-response-tracker), an alternative data source for governmental interventions. Currently, I do not include the financial measures of this data set and also do not include its data in the merged data file (see below) as I view the ACAPS data to be better suited ([this blog post details why](https://joachim-gassen.github.io/2020/04/exploring-and-benchmarking-oxford-government-response-data/)). 
 - `download_apple_mtr_data()`: Downloads [Mobility Trends Reports provided by Apple](https://www.apple.com/covid19/mobility) related to Covid-19. The data is provided at country  and sub-country levels.
 - `download_google_cmr_data()`: Downloads [Google COVID-19 Community Mobility Reports](https://www.google.com/covid19/mobility/) data. As of April 17, Google provides a nice and clean CSV file containing country-day and region-day data. This makes the PDF scraping code that used to be part of this package obsolete. If you are interested in it for didactic reasons, you can still find it in the [git hstory](https://github.com/joachim-gassen/tidycovid19/tree/947f010bccb111bc181ca31889c6f2f86b841fb5/R). This data is available at the country, regional and U.S. county level.
-- `download_google_trends_data()`: Downloads and tidies [Google Trends](https://trends.google.com/trends/) data on the search volume for the term "coronavirus" (Thank you to Yan Ouaknine for bringing up that idea!). This data can be used to assess the public attention to Covid-19 across countries and over time within a given country. The data is available at the country, regional and city level but avialability varies across countries as Google Trends provides only more granular data for regions with high search volumes.
+- `download_google_trends_data()`: Downloads and tidies [Google Trends](https://trends.google.com/trends/) data on the search volume for the term "coronavirus" (Thank you to Yan Ouaknine for bringing up that idea!). This data can be used to assess the public attention to Covid-19 across countries and over time within a given country. The data is available at the country, regional and city level but availability varies across countries as Google Trends provides only more granular data for regions with high search volumes.
 - `download_wbank_data()`: Downloads and tidies additional country level information provided by the [World Bank](https://data.worldbank.org) using the {wbstats} package. These data allow researchers to calculate per capita measures of the virus spread and to assess the association of macro-economic variables with the development of the virus.
 - `download_merged_data()`: Downloads all data sources and creates a merged country-day panel.
 
@@ -100,7 +100,7 @@ The focus of the package lies on data collection and not on visualization as the
 
 ### Plot Covid-19 Spread over Event Time
 
-The function `plot_covid19_spread()` allows you to quickly visualize the spread of the virus in relation to governmental intervention measures. It is inpired by the insightful displays created by John Burn-Murdoch from the Financial Times and offers various customization options.
+The function `plot_covid19_spread()` allows you to quickly visualize the spread of the virus in relation to governmental intervention measures. It is inspired by the insightful displays created by John Burn-Murdoch from the Financial Times and offers various customization options.
 
 ```{r DemoPlot}
 #remotes::install_github("joachim-gassen/tidycovid19")
@@ -187,13 +187,15 @@ use this [alternative server](https://trr266.wiwi.hu-berlin.de/shiny/tidycovid19
 
 ## Blog posts
 
+- **NEW:** [An intro blog post](https://joachim-gassen.github.io/2020/05/tidycovid19-new-data-and-doc/) providing a quick walk-through of the package.
+
 - [A blog post](https://joachim-gassen.github.io/2020/04/tidycovid19-new-viz-and-npi_lifting/) on the new visuals of the package. 
+
+- [A blog post](https://joachim-gassen.github.io/2020/04/covid19-explore-your-visualier-dof/) on the visualizer degrees of freedom that are inherent in a plot of the Covid-19 spread. 
 
 - [A blog post](https://joachim-gassen.github.io/2020/04/scrape-google-covid19-cmr-data/) on the PDF scraping of the new Google Covid-19 Community Movement Reports. 
 
 - [A somewhat dated blog post](https://joachim-gassen.github.io/2020/04/exploring-and-benchmarking-oxford-government-response-data/) comparing the ACAPS and Oxford data on governmental interventions.
-
-- [An intro blog post](https://joachim-gassen.github.io/2020/03/meet-tidycovid19-yet-another-covid-19-related-r-package/) containing not much more information then this README.
 
 - [An older blog post](https://joachim-gassen.github.io/2020/03/merge-covid-19-data-with-governmental-interventions-data/) that showcases some descriptive visuals to see what one can do with the data retrieved by this package.
 
