--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,6 @@
 ---
 output: github_document
+always_allow_html: true
 author: Joachim Gassen
 ---
 
@@ -45,8 +46,8 @@ Currently, the package offers the following functions to download data:
 
 - `download_jhu_csse_covid19_data()`: Downloads and tidies [Covid-19 data from the Johns Hopkins University CSSE Github Repo](https://github.com/CSSEGISandData/COVID-19). This data has developed to a standard resource for researchers and the general audience 
 interested in assessing the global spreading of the virus. The data is provided at country  and sub-country levels.
-- **NEW**: `download_ecdc_covid19_data()`: Downloads and tidies [Covid-19 case data provided by the European Centre for Disease Prevention and Control](https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide). The data is updated daily and contains the latest available public data on the number of new Covid-19 cases reported per day and per country.
-- **NEW**: `download_owid_testing_data()`: Downloads and tidies [testing data collected by the 'Our World in Data' team](https://ourworldindata.org/covid-testing). This team systematically collects data on Covid-19 testing from multiple national sources.
+- `download_ecdc_covid19_data()`: Downloads and tidies [Covid-19 case data provided by the European Centre for Disease Prevention and Control](https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide). The data is updated daily and contains the latest available public data on the number of new Covid-19 cases reported per day and per country.
+- `download_owid_testing_data()`: Downloads and tidies [testing data collected by the 'Our World in Data' team](https://ourworldindata.org/covid-testing). This team systematically collects data on Covid-19 testing from multiple national sources.
 - `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://www.acaps.org/covid19-government-measures-dataset). These data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. 
 - `download_oxford_npi_data()`: Downloads and tidies data from the [Oxford Covid-19 Government Response Tracker](https://www.bsg.ox.ac.uk/research/research-projects/oxford-covid-19-government-response-tracker), an alternative data source for governmental interventions. Currently, I do not include the financial measures of this data set and also do not include its data in the merged data file (see below) as I view the ACAPS data to be better suited ([this blog post details why](https://joachim-gassen.github.io/2020/04/exploring-and-benchmarking-oxford-government-response-data/)). 
 - `download_apple_mtr_data()`: Downloads [Mobility Trends Reports provided by Apple](https://www.apple.com/covid19/mobility) related to Covid-19. The data is provided at country  and sub-country levels.
@@ -70,7 +71,7 @@ library(zoo)
 df <- download_merged_data(cached = TRUE, silent = TRUE)
 
 df %>%
-  filter(iso3c == "ITA") %>%
+  filter(iso3c == "USA") %>%
   mutate(
     new_cases = confirmed - lag(confirmed),
     ave_new_cases = rollmean(new_cases, 7, na.pad=TRUE, align="right")
@@ -110,7 +111,7 @@ library(tidycovid19)
 merged <- download_merged_data(cached = TRUE, silent = TRUE)
 plot_covid19_spread(
   merged, highlight = c("ITA", "ESP", "GBR", "FRA", "DEU", "USA", "BRA", "MEX"),
-  intervention = "lockdown"
+  intervention = "lockdown", edate_cutoff = 270
 )
 ```
 
@@ -119,13 +120,13 @@ plot_covid19_spread(
 
 Another option to visualize the spread of Covid-19, in particular if you want to compare many countries, is to produce a stripes-based visualization. Meet the Covid-19 stripes:
 
-```{r Covid19Stripes, fig.height=8}
+```{r Covid19Stripes, fig.height=12}
 plot_covid19_stripes()
 ```
 
 Again, the function comes with many options. As an example, you can easily switch to a per capita display:
 
-```{r Covid19StripesPerCapita, fig.height=8}
+```{r Covid19StripesPerCapita, fig.height=12}
 plot_covid19_stripes(
   per_capita = TRUE, 
   population_cutoff = TRUE, 
@@ -160,7 +161,9 @@ map_covid19(merged, type = "confirmed", region = "Europe")
 If you have enough time (takes several minutes), you can also create an animation to visualize the spread of the virus over time.
 
 ```{r AnimatedMapWorldWide}
-map_covid19(merged, type = "confirmed", dates = unique(merged$date))
+map_covid19(
+  merged, type = "confirmed", per_capita = TRUE, dates = unique(merged$date)
+)
 ```
 
 Again, you can customize the data that you want to plot and of course you can also modify the plot itself by using normal `ggplot` syntax.
