--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ Currently, the package offers the following functions to download data:
 
 - `download_jhu_csse_covid19_data()`: Downloads and tidies [Covid-19 data from the Johns Hopkins University CSSE Github Repo](https://github.com/CSSEGISandData/COVID-19). This data has developed to a standard resource for researchers and the general audience 
 interested in assessing the global spreading of the virus. The data is provided at country  and sub-country levels.
-- `download_ecdc_covid19_data()`: Downloads and tidies [Covid-19 case data provided by the European Centre for Disease Prevention and Control](https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide). The data is updated daily and contains the latest available public data on the number of new Covid-19 cases reported per day and per country.
+- `download_ecdc_covid19_data()`: Downloads and tidies [Covid-19 case data provided by the European Centre for Disease Prevention and Control](https://www.ecdc.europa.eu/en/covid-19/data). The data is updated weekly and contains the latest available public data on the number of new Covid-19 cases reported per week and per country.
 - **NEW**: `download_owid_data()`: Downloads and tidies [data collected by the 'Our World in Data' team](https://ourworldindata.org/covid-testing). This team systematically collects data on hospitalizations, testing and vaccinations from multiple national sources.
 - `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://www.acaps.org/covid19-government-measures-dataset). These data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. 
 - `download_oxford_npi_data()`: Downloads and tidies data from the [Oxford Covid-19 Government Response Tracker](https://www.bsg.ox.ac.uk/research/research-projects/oxford-covid-19-government-response-tracker), an alternative data source for governmental interventions. Currently, I do not include the financial measures of this data set and also do not include its data in the merged data file (see below) as I view the ACAPS data to be better suited ([this blog post details why](https://joachim-gassen.github.io/2020/04/exploring-and-benchmarking-oxford-government-response-data/)). 
