--- a/README.Rmd
+++ b/README.Rmd
@@ -48,11 +48,11 @@ Currently, the package offers the following functions to download data:
 interested in assessing the global spreading of the virus. The data is provided at country  and sub-country levels.
 - `download_ecdc_covid19_data()`: Downloads and tidies [Covid-19 case data provided by the European Centre for Disease Prevention and Control](https://www.ecdc.europa.eu/en/covid-19/data). The data is updated weekly and contains the latest available public data on the number of new Covid-19 cases reported per week and per country.
 - `download_owid_data()`: Downloads and tidies [data collected by the 'Our World in Data' team](https://ourworldindata.org/covid-testing). This team systematically collects data on hospitalizations, testing and vaccinations from multiple national sources.
-- `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://www.acaps.org/covid19-government-measures-dataset). These data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. 
+- `download_acaps_npi_data()`: Downloads and tidies the [Government measures dataset provided by the Assessment Capacities Project (ACAPS)](https://www.acaps.org/covid19-government-measures-dataset). These data allow researchers to study the effect of non-pharmaceutical interventions on the development of the virus. Please NOTE: This data is no longer updated by the data provider since December 10, 2020.
 - `download_oxford_npi_data()`: Downloads and tidies data from the [Oxford Covid-19 Government Response Tracker](https://www.bsg.ox.ac.uk/research/research-projects/oxford-covid-19-government-response-tracker), an alternative data source for governmental interventions. Currently, I do not include the financial measures of this data set and also do not include its data in the merged data file (see below) as I view the ACAPS data to be better suited ([this blog post details why](https://joachim-gassen.github.io/2020/04/exploring-and-benchmarking-oxford-government-response-data/)). 
 - `download_apple_mtr_data()`: Downloads [Mobility Trends Reports provided by Apple](https://www.apple.com/covid19/mobility) related to Covid-19. The data has been provided by Apple at country  and sub-country levels until April 14, 2022.
-- `download_google_cmr_data()`: Downloads [Google COVID-19 Community Mobility Reports](https://www.google.com/covid19/mobility/) data. As of April 17, Google provides a nice and clean CSV file containing country-day and region-day data. This makes the PDF scraping code that used to be part of this package obsolete. If you are interested in it for didactic reasons, you can still find it in the [git hstory](https://github.com/joachim-gassen/tidycovid19/tree/947f010bccb111bc181ca31889c6f2f86b841fb5/R). This data is available at the country, regional and U.S. county level.
-- `download_google_trends_data()`: Downloads and tidies [Google Trends](https://trends.google.com/trends/) data on the search volume for the term "coronavirus" (Thank you to Yan Ouaknine for bringing up that idea!). This data can be used to assess the public attention to Covid-19 across countries and over time within a given country. The data is available at the country, regional and city level but availability varies across countries as Google Trends provides only more granular data for regions with high search volumes.
+- `download_google_cmr_data()`: Downloads [Google COVID-19 Community Mobility Reports](https://www.google.com/covid19/mobility/) data. As of April 17 2020, Google has been providing a nice and clean CSV file containing country-day and region-day data. This makes the PDF scraping code that used to be part of this package obsolete. If you are interested in it for didactic reasons, you can still find it in the [git hstory](https://github.com/joachim-gassen/tidycovid19/tree/947f010bccb111bc181ca31889c6f2f86b841fb5/R). This data is available at the country, regional and U.S. county leve abd has been provided by Google since October 15, 2022.
+- `download_google_trends_data()`: Downloads and tidies [Google Trends](https://trends.google.com/trends/) data on the search volume for the term "coronavirus" (Thank you to Yan Ouaknine for bringing up that idea!). This data can be used to assess the public attention to Covid-19 across countries and over time within a given country. The data is available at the country, regional and city level but availability varies across countries as Google Trends provides only more granular data for regions with high search volumes. 
 - `download_wbank_data()`: Downloads and tidies additional country level information provided by the [World Bank](https://data.worldbank.org) using the {wbstats} package. These data allow researchers to calculate per capita measures of the virus spread and to assess the association of macro-economic variables with the development of the virus.
 - `download_merged_data()`: Downloads all data sources and creates a merged country-day panel.
 
@@ -192,7 +192,7 @@ use this [alternative server](https://trr266.wiwi.hu-berlin.de/shiny/tidycovid19
 
 - [An intro blog post](https://joachim-gassen.github.io/2020/05/tidycovid19-new-data-and-doc/) providing a quick walk-through of the package.
 
-- **New**: [A blog post](https://joachim-gassen.github.io/2021/01/vaccination-data-an-outlier-tale/) on the OWID vaccination data.
+- [A blog post](https://joachim-gassen.github.io/2021/01/vaccination-data-an-outlier-tale/) on the OWID vaccination data.
 
 - [A blog post](https://joachim-gassen.github.io/2020/04/tidycovid19-new-viz-and-npi_lifting/) on the new visuals of the package. 
 
